simplify Solvers